# edusched-scheduler

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Implementation_Plan.md  LICENSE  MANIFEST.in  PORTFOLIO_READINESS_PLAN.md  Proposal.md  README.md  TEST_SUMMARY.md  USER_GUIDE.md  api_test_summary.md  demo_scheduling_features.py  docker-compose.yml  env.production.example  pyproject.toml  start_test_environment.py
.github/workflows/: deploy.yml  python-publish.yml
.hypothesis/constants/: 01129f0b18048df7  05729d7e9d8419f2  09e5142555135ffe  0a53c2d23dfade3b  13813c4b54fa0f99  1b133bbf96e55c8a  1d53ec5ee70157de  206cc71c7238b7ae  29fefb23a04e4474  2aadc45e0ea1a512  2ba858968bd1ad88  2d3764244578554a  2e23d0daf1470426  313cae7810804a68  3347776fc40a3921  34a448074f756752  36af870ba99756ed  376f9d7fe909577d  39e396a0c1717b98  3a0ca2b2a50dd480  3b0b564f53a2f2f4  3eb585d5bbcf17c6  41199cad7c5fd10e  43d797b2c10e5d5d  459e34f3c17e2603  46157058ca162353  4903d3b394d68799  4970d52543a508cb  4e4766e7fd297fef  51bc9840bd98b3c0  53c42195140a58f9  56b503558d9d13b1  59b7e797e36260dd  5bcc99ee4dbd9a78  5dd78f0123310695  67b52e0297da272d  6dd6fd56af6614c9  6e9e5c1943577a27  73f72e8373e3aac6  778c7030d5c391bb  (+30 more)
.hypothesis/examples/04e6b3400353b141/: 16a68a107eed2441  17dd1d79ddf698e8  181a6dc12f3ffbd1  1cbe1376cd3d8d7d  23248502dcefe7e1  2339efb9fa013a9e  29b039abab39963b  3215ed8a64d3dc89  4d5010241a87e1b3  4f88ab58bcd3dfa0  534471ffc7468ced  535cac9ebd6cae4f  59ed702f915f496b  5ae460b6f7fe02e7  5bab973774f06fcd  741d00e239269b0b  74c3fc5bfb8cf162  7933789ac096cf9b  7a389127a109d9e1  85a6175e5c1e6efe  86505a86b836fcfc  8cfc1da3c9de5dad  a4d06524558b9f55  b3ded148ba133296  b7c0ce2ce350de3e  bfafd8d4277f33c9  c93facf74ace4759  d648c2f9960e14e4  d81497ce0f4e68a2  d9d52766c1b6df57  f01e5a47c60a17b7  f4c4563e0d00a6af  f557b80113079bdf  f647f0d7f1006e04  f7b8957443f2e2c1  f7f365db669b86b4  f86eea2b156478fa  f8cc8639c09571f5
.hypothesis/examples/23248502dcefe7e1/: d6e52b30d74335d5
.hypothesis/examples/29b039abab39963b/: 0aa1cdddfc2fb43d  2c55165a67141076  380553fe9b1df7f8  385ad0441803a25f  72846dddd0320f52  73916a413c80a825  943692e5c6e8053a  a6e38e82c760279a  c0f961759c318bde  c6085c5f53b0b8de  da0ff3fbe660473c
.hypothesis/examples/3215ed8a64d3dc89/: 2ad109ab84a6ebf6
.hypothesis/examples/4d5010241a87e1b3/: 8682ef69d0241b48
.hypothesis/examples/4f88ab58bcd3dfa0/: a089a1b8f36e8206
.hypothesis/examples/534471ffc7468ced/: b815d8a3b3740bd1
.hypothesis/examples/59ed702f915f496b/: 8070508c69fecea2
.hypothesis/examples/5ae460b6f7fe02e7/: 0e8edf63508efe80
.hypothesis/examples/5bab973774f06fcd/: c9e201e9e03f7e70
.hypothesis/examples/74c3fc5bfb8cf162/: 3a5c5bdce07e8373
.hypothesis/examples/7933789ac096cf9b/: ff093112584fa876
.hypothesis/examples/7a389127a109d9e1/: 969fc5be296d3eff
.hypothesis/examples/85a6175e5c1e6efe/: 059aace75cb668c8  8d1563397cccbb96  a49c2af800262ac3  e69fbdc93e8cfedd  f59f05169ed1a195  f75441f520159654
.hypothesis/examples/86505a86b836fcfc/: 27954c464d0a85f5
.hypothesis/examples/8cfc1da3c9de5dad/: 1faf7ef647f665a5
.hypothesis/examples/a4d06524558b9f55/: 570db3a214aa5202  a915f3ee497fd356  fffae87f32f39726
.hypothesis/examples/b7c0ce2ce350de3e/: 0ce2ed94860a544b  1e4334a33fdac27d  1fe6817d5aa74b66  5247969bc2b3ec5d  86c1ffdd4569d5ef  9a9c6bee31ac76bb  c7193aadfa6a649e  c8909f88f07a7274  d44d30afbce847dc  e36575d2789d8208  f4c90d48e696a807  f873266bc071b0f3  f884643504560086
demo_data/: courses_demo.csv  departments_demo.csv
dev/: demo_teacher_constraints.py  quick_test.py  reproduce_resource_bug.py  test_combined_features.py  test_full_stack.py
docs/: Makefile  PREPUBLICATION_REVIEW.md  TEST_STACK_README.md  data_import_guide.md  e2e-test-plan.md  test_results.md
docs/portfolio/: PORTFOLIO_DEPLOYMENT_GUIDE.md  PORTFOLIO_SHOWCASE.md
docs/source/: api.rst  conf.py  contributing.rst  examples.rst  index.rst  installation.rst  quickstart.rst  user_guide.rst
examples/: data_import_example.py
examples/demo_data/: buildings_demo.csv  demo_summary.json  resources_demo.csv  teachers_demo.csv  time_blockers_demo.csv
examples/sample_data/: Teacher_Template.csv
examples/templates/: Department_Template.csv  Holiday_Template.csv  Teacher_Template.csv
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.prod.ts  vite.config.ts
frontend/public/: index.html
frontend/src/: App.js  App.tsx  index.css
planning/: backend_improvement_plan.md  priority_tasks.md  technical_debt_analysis.md
scripts/: benchmark_solvers.py  create_excel_templates.py  generate_portfolio_demo.py  generate_sample_data.py  generate_test_coverage.py  import_data.py  schedule.py
src/edusched/: __init__.py  api.py  core_api.py  errors.py
src/edusched.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
templates/: Building_Template.csv  Course_Template.csv  README.md  Room_Template.csv  Time_Blocker_Template.csv
tests/: __init__.py  conftest.py  test_api_properties.py  test_blackout_dates.py  test_building_features.py  test_capacity_features.py  test_comprehensive_coverage.py  test_conflict_properties.py  test_constraint_properties.py  test_data_import.py  test_department_teacher_constraints.py  test_domain_properties.py  test_incremental_scheduling_properties.py  test_infeasibility_properties.py  test_instructor_constraints.py  test_locked_assignment_properties.py  test_objective_properties.py  test_problem_properties.py  test_project_setup.py  test_result_properties.py  test_room_flexibility.py  test_scheduling_features.py  test_solver_properties.py  test_student_features.py  test_teacher_constraints.py  test_type_validation_properties.py
tests/e2e/: README.md  conftest.py  pytest.ini  test_edge_cases.py  test_performance.py
(+158 files in other folders)
