[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edusched"
version = "0.1.0b1"
description = "A constraint-based scheduling package for educational institutions"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
    {name = "EduSched Contributors"}
]
keywords = ["scheduling", "constraints", "education", "optimization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "python-dateutil>=2.8.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
pandas = ["pandas>=1.5.0"]
excel = ["openpyxl>=3.0.0"]
dev = ["pytest>=7.0.0", "hypothesis>=6.0.0", "mypy>=1.0.0", "ruff>=0.1.0"]
all = ["edusched[pandas,excel,dev]"]

[project.urls]
Homepage = "https://github.com/edusched/edusched"
Documentation = "https://edusched.readthedocs.io"
Repository = "https://github.com/edusched/edusched.git"
Issues = "https://github.com/edusched/edusched/issues"

[tool.setuptools]
packages = ["edusched"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.ruff]
line-length = 100
target-version = "py39"
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.isort]
known-first-party = ["edusched"]
