[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "edusched"
version = "0.1.0"
description = "A constraint-based scheduling package for educational institutions"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Dustin Ober", email = "dober.code@gmail.com"}
]
maintainers = [
    {name = "Dustin Ober", email = "dober.code@gmail.com"}
]
keywords = [
    "scheduling",
    "constraints",
    "education",
    "optimization",
    "timetabling",
    "university",
    "school",
    "course-scheduling",
    "resource-allocation"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Topic :: Office/Business :: Scheduling",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]

dependencies = [
    "python-dateutil>=2.8.0",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
ortools = ["ortools>=9.0.0"]
pandas = ["pandas>=1.5.0"]
excel = ["openpyxl>=3.0.0"]
api = [
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "pydantic>=2.0.0",
]
icalendar = ["icalendar>=5.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]
all = ["edusched[ortools,pandas,excel,api,icalendar]"]

[project.urls]
Homepage = "https://github.com/dustinober1/edusched-scheduler"
Documentation = "https://github.com/dustinober1/edusched-scheduler#readme"
Repository = "https://github.com/dustinober1/edusched-scheduler.git"
Issues = "https://github.com/dustinober1/edusched-scheduler/issues"
Changelog = "https://github.com/dustinober1/edusched-scheduler/releases"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["edusched*"]

[tool.setuptools.package-data]
edusched = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "C",    # flake8-comprehensions
    "B",    # flake8-bugbear
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in argument defaults (needed for FastAPI Depends)
    "B904",  # exception chaining (stylistic preference)
    "C901",  # function too complex (some algorithms require complexity)
]

[tool.ruff.lint.isort]
known-first-party = ["edusched"]

[tool.coverage.run]
source = ["src/edusched"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
